# StudentManagementBySList

./: CMakeLists.txt  CMakeLists.txt.user.WwZhNA  LICENSE  README.md  StudentManagement.qmlproject  StudentManagement.qmlproject.qtds  qmlmodules  student.cpp  student.h  tablestudentcontroller.cpp  tablestudentcontroller.h
.github/workflows/: main.yml
content/: App.qml  App.qml.CxDNAj  App.qml.mkAsQm  Screen01.ui.qml  Screen01.ui.qml.autosave.KstcTo  Screen01.ui.qml.nawZqa  Screen01.ui.qml.sSWrnC
imports/: CMakeLists.txt
imports/StudentManagementBySList/: CMakeLists.txt  qmldir
imports/StudentManagementBySList/designer/: plugin.metainfo
src/: DSALibraries.hpp  import_qml_plugins.h  main.cpp
src/Containers/CList/: CList.hpp  CListIterator.hpp  CListNode.hpp
src/Containers/DList/: DList.hpp  DListIterator.hpp  DListNode.hpp
src/Containers/List/: List.hpp  ListExceptions.hpp  ListIterator.hpp  ListNode.hpp
src/Containers/SList/: SList.hpp  SListIterator.hpp  SListNode.hpp
src/Containers/Stack/: Stack.hpp  StackExceptions.hpp
src/Utilities/: Allocator.hpp  Exception.hpp
